--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'Baloo Bhai 2', cursive;
 }
 
 .App-logo {
@@ -36,3 +37,7 @@
     transform: rotate(360deg);
   }
 }
+
+/* .App{
+  font-family: 'Baloo Bhai 2', cursive;
+} */
